add synchronization for update and delete methods in driver-service and passenger-service with keycloak

--- a/passenger-service/src/main/resources/messages.properties
+++ b/passenger-service/src/main/resources/messages.properties
@@ -17,3 +17,4 @@ resource.already.exist.message=The {0} with {1} already exist
 validation.failed.message=Validation failed
 default.exception.message=Unexpected exception
 access.denied.message=Access to resource denied
+entity.not.found.keycloak.message=Entity not found in keycloak
