--- a/driver-service/src/main/resources/messages.properties
+++ b/driver-service/src/main/resources/messages.properties
@@ -23,6 +23,8 @@ gender.notnull=Gender driver must not be null.
 gender.length=Gender driver length must be shorter than 255.
 gender.pattern=Pattern of gender must be (MALE/FEMALE)
 carsId.notnull=Cars id must not be null.
+password.length=Password driver length must be shorter than 255.
+password.notblank=Password driver must not be blank.
 
 #Messages Exception
 entity.not.found.message=The {0} with {1} not found
@@ -30,3 +32,4 @@ validation.failed.message=Validation failed
 default.exception.message=Unexpected exception
 resource.already.exists.message=The {0} with {1} already exist
 access.denied.message=Access to resource denied
+entity.not.found.keycloak.message=Entity not found in keycloak
